--- a/reflex-fsnotify.cabal
+++ b/reflex-fsnotify.cabal
@@ -36,5 +36,6 @@ library
         containers >=0.6 && <0.8,
         directory >=1.3 && <1.4,
         filepath >=1.4 && <1.6,
-        fsnotify >=0.4 && <0.5,
+        fsnotify >=0.4.1 && <0.5,
+          -- 0.4.0 does not work with text 2.1.2: https://github.com/haskell-fswatch/hfsnotify/issues/116
         reflex >=0.5 && <1
